# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  interesting_scenes.cpp  makefile  ray_sphere_intersect.sv  ray_sphere_intersect_tb.cpp  raytracer.cpp  run.sh
src/: main.cpp
